# auction-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  generate_grpc.sh  pyproject.toml
.github/workflows/: publish-docker-image.yml
app/: config.py  main.py
app/api/proto/: auction-service.proto
app/db/: connection.py
app/models/: auction_models.py
app/proto/: auction-service.proto
app/services/: auction_service.py
app/workers/: auction_closer.py
