[project]
name = "auction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
]
